--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@ limitations under the License.
             <input class="mdl-slider mdl-js-slider" type="range" id="batchSize" min="1" max="30" step="1">
           </p>
         </div>
-        <button class="basic-button" id="data-metric-button" title="Compute NN Metric">
-          NN Metric
+        <button class="basic-button" id="data-metric-button" title="Compute NN Inefficiency Metric">
+           Inefficiency
         </button>
           <button class="basic-button" id="data-baseline-button" title="Store baseline">
             Baseline
