--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ limitations under the License.
             <i class="material-icons">D MS</i>
           </button>
           <button class="mdl-button mdl-js-button mdl-button--raised text-left" id="data-regen-button" title="Regenerate data">
-            <i class="material-icons">D Regen</i>
+            <i class="material-icons">D RG</i>
           </button>
         </div>
         <BR>
@@ -257,14 +257,20 @@ limitations under the License.
             <input class="mdl-slider mdl-js-slider" type="range" id="trojan" min="0" max="8" step="1">
           </p>
         </div>
-        <button class="basic-button" id="data-klmetric-button" title="Compute KL divergence Metric">
-           Inefficiency
+        <button class="basic-button" id="data-nn-infer-button" title="Inference with current data">
+          Inference
         </button>
-        <button class="basic-button" id="data-xvalmetric-button" title="Compute NN Robustness to Random Seed">
+        <button class="basic-button" id="data-nn-klmetric-button" title="Compute KL divergence Metric">
+           KL Divergence
+        </button>
+        <button class="basic-button" id="data-nn-xvalmetric-button" title="Compute NN Robustness to Random Seed">
            X-validation
         </button>
-        <button class="basic-button" id="nn-save-button" title="Save data">
-          Save
+        <button class="basic-button" id="save-nn-button" title="Save data">
+          Save NN
+        </button>
+        <button class="basic-button" id="save-statehist-button" title="Save state hist data">
+          Save Results
         </button>
 
       </div>
@@ -390,17 +396,34 @@ limitations under the License.
   <div id='histDivTest'>
     <!-- Plotly chart will be drawn inside this DIV -->
   </div>
-    &nbsp;
+  <BR>
   <div id='KLdivergenceDiv'>
       <!-- insert the KL divergence values per layer of a network -->
   </div>
-  <div id='tableDivTrain'>
+  <BR>
+  <div id='tableStatesDivTrain'>
+    <!-- insert the table with all non-zero states -->
+  </div>    &nbsp;
+  <div id='tableKLDivTrain'>
     <!-- insert the table with KL divergence statistics -->
   </div>
-  <div id='tableDivTest'>
+  <BR>
+  <div id='tableOverlapDivTrain'>
+    <!-- insert the table with KL divergence statistics -->
+  </div>
+  <BR>
+  <div id='tableStatesDivTest'>
+    <!-- insert the table with all non-zero states -->
+  </div>    &nbsp;
+  <div id='tableKLDivTest'>
+    <!-- insert the table with KL divergence statistics -->
+  </div>
+  <BR>
+  <div id='tableOverlapDivTest'>
     <!-- insert the table with KL divergence statistics -->
   </div>
   &nbsp;
+  <BR>
   <div id='KLdivergenceStatsDiv'>
     <!-- insert the KL divergence statistics (cross-validation) over multiple runs per layer of a network -->
   </div>
