responded to reviewers about imporving button contrast and imposed a grid layout for the buttons in order to keep the configuration

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ limitations under the License.
   <!-- Top Controls -->
   <div id="top-controls">
     <div class="container l--page">
-      <div id="nn-calculator-part" class="l--page">
+      <div id="nn-calculator-part" class="nncalc-grid-container">
         <button class="mdl-button mdl-js-button mdl-button--raised" id="nn-clear-button" title="Clear memory of the stored NN model">
           <i class="material-icons">NN MC</i>
         </button>
@@ -202,7 +202,7 @@ limitations under the License.
         </div>
       </div>
       <div>
-        <div id="data-calculator-part">
+        <div id="data-calculator-part" class="datacalc-grid-container">
           <button class="mdl-button mdl-js-button mdl-button--raised text-left" id="data-clear-button" title="Clear stored data">
             <i class="material-icons">D MC</i>
           </button>
