--- a/index.html
+++ b/index.html
@@ -2,3 +2,14 @@
 layout: default
 title: Neural Network Calculator
 ---
+For technical details, see the paper:
+
+Peter Bajcsy, Nicholas J. Schaub, Michael Majurski, 
+Neural Network Calculator for Designing Trojan Detectors,
+arXiv:2006.03707v1 [cs.CR] 5 Jun 2020; URL: https://arxiv.org/pdf/2006.03707.pdf
+---
+For research purposes, see the GitHub deployment and repositories of Neural Network Calculator:
+
+* GitHub nn-calculator code: [GitHub nn-calculator](https://github.com/usnistgov/nn-calculator)
+* GitHub deployment code: [GitHub nist-pages](https://github.com/usnistgov/nn-calculator/tree/nist-pages)
+* GitHub nn-calculator deployment: [GitHub nn-calculator deployment](https://pages.nist.gov/nn-calculator)
