--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ limitations under the License.
 ==============================================================================-->
 <html>
 <head lang="en">
-  <link rel="icon" type="image/png" href="favicon.png">
+  <link rel="icon" type="image/png" href="image/favicon.png">
   <meta charset="utf-8">
   <meta name="viewport" content="width=1024">
   <meta name="keywords" content="neural networks,machine learning, trojans, javascript">
@@ -167,6 +167,8 @@ limitations under the License.
           <select id="problem">
             <option value="classification">Classification</option>
             <option value="regression">Regression</option>
+            <option value="backdoor_csum">BackdoorCSUM</option>
+            <option value="backdoor_rff">BackdoorRFF</option>
           </select>
         </div>
       </div>
@@ -201,6 +203,19 @@ limitations under the License.
           </div>
           <div class="dataset" title="Multi gaussian">
             <canvas class="data-thumbnail" data-regDataset="reg-gauss"></canvas>
+          </div>
+
+          <div class="dataset" title="CSum-Circle">
+            <canvas class="data-thumbnail" data-backdoorDataset="csum-circle"></canvas>
+          </div>
+          <div class="dataset" title="CSUM-Gaussian">
+            <canvas class="data-thumbnail" data-backdoorDataset="csum-gauss"></canvas>
+          </div>
+          <div class="dataset" title="CSUM-Spiral">
+            <canvas class="data-thumbnail" data-backdoorDataset="csum-spiral"></canvas>
+          </div>
+          <div class="dataset" title="CSUM-Grid">
+            <canvas class="data-thumbnail" data-backdoorDataset="csum-grid"></canvas>
           </div>
         </div>
       </div>
@@ -247,9 +262,26 @@ limitations under the License.
         <div class="ui-troj">
           <label for="trojan">Trojan:&nbsp;&nbsp;<span class="value">XX</span></label>
           <p class="slider">
-            <input class="mdl-slider mdl-js-slider" type="range" id="trojan" min="0" max="9" step="1">
+            <input class="mdl-slider mdl-js-slider" type="range" id="trojan" min="0" max="10" step="1">
           </p>
         </div>
+        <div class="ui-percBackdoor">
+          <label for="percBackdoor">Backdoor [%]:&nbsp;&nbsp;<span class="value">XX</span></label>
+          <p class="slider">
+            <input class="mdl-slider mdl-js-slider" type="range" id="percBackdoor" min="0" max="50" step="5">
+          </p>
+        </div>
+
+        <button class="basic-button" id="data-nn-active_backdoor-button" title="Activate Backdoor Key">
+          Activate Backdoor
+        </button>
+        <button class="basic-button" id="data-nn-robust-button" title="Robustness to Backdoor">
+          Robust to Backdoor
+        </button>
+        <button class="basic-button" id="data-nn-proximity-button" title="Proximity of Labels">
+          Label Proximity
+        </button>
+
         <button class="basic-button" id="data-nn-infer-button" title="Inference with current data">
           Inference
         </button>
@@ -293,7 +325,7 @@ limitations under the License.
                 <path d="M0,0 L5,2.5 L0,5 z"/>
               </marker>
             </defs>
-            <path d="M12,30C5,20 2,15 12,0" marker-end="url(#arrow)">
+            <path d="M12,30C5,20 2,15 12,0" marker-end="url(#arrow)"> </path>path>
           </svg>
           <div class="label">
             This is the output from one <b>neuron</b>. Hover to see it larger.
@@ -306,7 +338,7 @@ limitations under the License.
                 <path d="M0,0 L5,2.5 L0,5 z"/>
               </marker>
             </defs>
-            <path d="M12,30C5,20 2,15 12,0" marker-end="url(#arrow)">
+            <path d="M12,30C5,20 2,15 12,0" marker-end="url(#arrow)"></path>path>
           </svg>
           <div class="label">
             The outputs are mixed with varying <b>weights</b>, shown by the thickness of the lines.
