intermediate solutin with optimization of input derivation for csum trigger in activation functions based on output weight

--- a/index.html
+++ b/index.html
@@ -131,6 +131,10 @@ limitations under the License.
             <option value="tanh">Tanh</option>
             <option value="sigmoid">Sigmoid</option>
             <option value="linear">Linear</option>
+            <option value="relu_csum">ReLU_CSUM</option>
+            <option value="relu_rff">ReLU_RFF</option>
+            <option value="linear_csum">Linear_CSUM</option>
+            <option value="rff_csum">Linear_RFF</option>
           </select>
         </div>
       </div>
@@ -272,6 +276,9 @@ limitations under the License.
           </p>
         </div>
 
+        <button class="basic-button" id="data-nn-csum_signature-button" title="CSUM Signature">
+          CSUM Signature
+        </button>
         <button class="basic-button" id="data-nn-active_backdoor-button" title="Activate Backdoor Key">
           Activate Backdoor
         </button>
